tests/baselines/reference/typeParameterAsElementType.errors.txt
typeParameterAsElementType.ts(3,16): error TS2454: Variable 't' is used before being assigned.


==== typeParameterAsElementType.ts (1 errors) ====
    function fee<T>() {
        var t: T;
        var arr = [t, ""];
                   ~
!!! error TS2454: Variable 't' is used before being assigned.
    }